--- a/index.html
+++ b/index.html
@@ -11,44 +11,45 @@
   <div class= "container">
     <div class="jumbotron">
       <div class="centered-image"> 
-        <img src="images/CinemagicLogo.jpg" alt="an image of Cinemagic's Logo">
+        <img src="images/Cinemagic.jpg" alt="an image of Cinemagic's Logo">
       </div>
-      <h3>You love Cinemagic,</h3>
-        <h5><em>Where movies and magic come together!</em></h5>
-        <br>
-        <br>
-        <br>
-        <h6>Pick your feature film:</h6>
-          <form id="movie-form">
-            <select class="form-control" id="film">
-              <option>The Breakfast Club</option>
-              <option><strong>NEW RELEASE</strong> She-Hulk</option>
-            </select>
+      <h3 class="centered-text">You love Cinemagic,</h3>
+      <h5 class="centered-text"><em>Where movies and magic come together!</em></h5>
+      <br>
+      <br>
+      <br>
+      <h6>Pick your feature film:</h6>
+      <form id="movie-form">
+        <select class="form-control" id="film">
+          <option>The Breakfast Club</option>
+          <option>NEW RELEASE She-Hulk</option>
+        </select>
 
 
 
-            <div class="form-group">
-              <label>
-                <input type="radio" name="show-time" value="matinee" checked>
-                1:00PM PST
-              </label>
-            </div>
-            <div class="form-group">
-              <label>
-                <input type="radio" name="show-time" value="evening">
-                8:00PM PST
-              </label>
-            </div>
+        <div class="form-group">
+          <label>
+            <input type="radio" name="show-time" value="matinee" checked>
+            1:00PM PST
+          </label>
+        </div>
+        <div class="form-group">
+          <label>
+            <input type="radio" name="show-time" value="evening">
+            8:00PM PST
+          </label>
+        </div>
 
 
-            <select class="form-control" id="age">
-              <option>Adult</option>
-              <option>Senior Discount <em>(65+)</em></option>
-            </select>
-            </div>
-          </form>
-
-
+        <select class="form-control" id="age">
+          <option>Adult</option>
+          <option>Senior Discount (65+)</option>
+        </select>
+        </div>
+        <button class="btn btn-warning" id="ticket-input">Get your Tickets!</button>
+      </form>
+      <hr>
+      <ul id="printedTicket"><span id="ticket-output"</ul>
 
 
 
