beging business logic- create functions for each input & cost

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 
         <div class="form-group">
           <label>
-            <input type="radio" name="show-time" value="matinee" checked>
+            <input type="radio" name="show-time" id="matinee" value="matinee" checked>
             1:00PM PST
           </label>
         </div>
         <div class="form-group">
           <label>
-            <input type="radio" name="show-time" value="evening">
+            <input type="radio" name="show-time" id="evening" value="evening">
             8:00PM PST
           </label>
         </div>
 
 
-        <select class="form-control" id="age">
+        <select class="form-control" id="ageId">
           <option>Adult</option>
           <option>Senior Discount (65+)</option>
         </select>
