WIP: refactored business logic + change branching to a prototype

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <h6>Pick your feature film:</h6>
       <form id="movie-form">
         <select class="form-control" id="film">
-          <option id="movie" value="title1">The Breakfast Club</option>
-          <option id="movie" value="title2">NEW RELEASE She-Hulk</option>
+          <option id="film" value="title1">The Breakfast Club</option>
+          <option id="film" value="title2">NEW RELEASE She-Hulk</option>
         </select>
 
 
@@ -41,23 +41,26 @@
         </div>
 
 
-        <select class="form-control" id="ageId">
+        <select class="form-control">
           <option id="age" value="adult">Adult</option>
           <option id="age" value="senior">Senior Discount (65+)</option>
         </select>
         </div>
-        <button class="btn btn-warning" id="ticket-input">Get your Tickets!</button>
+        <button class="btn-warning" id="ticket-input">Get your Tickets!</button>
       </form>
       <hr>
-      <ul id="printedTicket"><span id="ticket-output"</ul>
-      <div id="show-ticket">
-        <div class="col-md-6">
+      <!-- <ul id="printedTicket"><span id="ticket-output"</ul> -->
+      <div class="col-md-6">
+        <div id="show-ticket">  
           <p>Movie Title: <span class="movie-title"></span></p>
           <p>Showtime: <span class="showtime"></span></p>
           <p>Age: <span class="age"></span></p>
           <p>Cost: <span class="cost"></span></p>
         </div>
       </div>
+    </div>
+    <div class= "jumbotron">
+    <h5 class="centered-text"><em>for the best seats around, you love Cinemagic!</em></h5>
     </div>
   </div>
 </body>
